updated manifest to include template file, fixed package inclusion; made template dir configurable with an env var

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,7 +4,7 @@ include HISTORY.md
 include LICENSE
 include README.md
 
-recursive-include tests *
+recursive-include yadis_server/templates *
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
 
