--- a/yadis_server/.travis.yml
+++ b/yadis_server/.travis.yml
@@ -1,16 +1,5 @@
-# Config file for automatic testing at travis-ci.org
-
 language: python
 python:
-  - 3.6
-  - 3.5
-  - 3.4
-  - 2.7
-
-# Command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: pip install -U tox-travis
-
-# Command to run tests, e.g. python setup.py test
-script: tox
-
-
+ - "3.8"
+install: pip install -r requirements.txt
+script: sh pytest
